ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sbs

spec:
  rules:
  - host: "my.sbs"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-sbs
            port:
              number: 80
